--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://www.paypal.com/sdk/js?client-id=ATEJll5Pv-0qCc9ORrku_Fn6zS9jS3G3aBiImft1TKscHwm6KU_sY_7njtswWwy5sB_M1Sy7MvJJS07M&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
 </head>
 <body>
   <app-root></app-root>
